# repo-scout

./: .gitignore  CLAUDE.md  LICENSE  README.md  cli.py  config.py  github_api.py  patterns.py  pyproject.toml  report.py  scan_log.py  scanner.py  utils.py
docs/: PROJECT_DOCS.md
tests/: conftest.py  test_patterns.py  test_report.py  test_scanner.py  test_utils.py
